# PaddleOCR-json

./: .gitignore  README.md
cpp/: .gitignore  CMakeLists.txt  pixi.toml
cpp/include/: paddleocr.h  task.h
cpp/paddleocr/api/pipelines/: ocr.cc  ocr.h
cpp/paddleocr/pipelines/ocr/: result.h
cpp/paddleocr/utils/: ilogger.cc  ilogger.h
cpp/src/: main.cpp  paddleocr.cpp  task.cpp
